# cranhaven.r-universe.dev

./: LICENSE  README.md  build.R  packages.json  update.R
BRugs/: DESCRIPTION  MD5  NAMESPACE  NEWS  configure  configure.ac
BRugs/R/: 00.R
BRugs/inst/: CITATION
BRugs/man/: BRugs.Rd  BRugsFit.Rd  bgr.point.Rd  buffer.Rd  bugs.data.Rd  bugs.inits.Rd  buildMCMC.Rd  dic.Rd  dimensions.Rd  get.chain.Rd  get.num.chains.Rd  help.WinBUGS.Rd  info.memory.Rd  info.modules.Rd  info.node.Rd  info.updaters.Rd  model.RN.Rd  model.adaptivePhase.Rd  model.check.Rd  model.compile.Rd  model.data.Rd  model.factory.Rd  model.gen.inits.Rd  model.inits.Rd  model.iteration.Rd  model.names.Rd  model.precision.Rd  model.save.state.Rd  model.setAP.Rd  model.setWD.Rd  model.update.Rd  plot.autoC.Rd  plot.bgr.Rd  plot.density.Rd  plot.history.Rd  ranks.Rd  rats.Rd  samples.autoC.Rd  samples.bgr.Rd  samples.clear.Rd  (+15 more)
BRugs/src/: BugsHelper.c  Makefile.win  Makevars.in
BRugs/tests/: BRugs.Rout.save  examples.Rout.save  functions.R  functions.Rout.save  test.sh
MPCR/src/: CMakeLists.txt  CMakeLists_inv.txt  DataTypeModule.cpp  MPCRTileModule.cpp  Makefile  RcppExports.cpp  symbols.rds
SLmetrics/: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md  cleanup  cleanup.win  configure  configure.ac  configure.win
SLmetrics/R/: OpenMP.R  RcppExports.R  S3_Accuracy.R  S3_AreaUnderTheCurve.R  S3_BalancedAccuracy.R  S3_BrierScore.R  S3_CoefficientOfDetermination.R  S3_CohensKappa.R  S3_ConcordanceCorrelationCoefficient.R  S3_ConfusionMatrix.R  S3_Entropy.R  S3_FBetaScore.R  S3_FalseDiscoveryRate.R  S3_FalseOmissionRate.R  S3_FalsePositiveRate.R  S3_FowlkesMallowsIndex.R  S3_GammaDeviance.R  S3_GeometricMeanSquaredError.R  S3_HammingLoss.R  S3_HuberLoss.R  S3_JaccardIndex.R  S3_LikelihoodRatios.R  S3_LogLoss.R  S3_MatthewsCorrelationCoefficient.R  S3_MeanAbsoluteError.R  S3_MeanAbsolutePercentageError.R  S3_MeanArctangentAbsolutePercentageError.R  S3_MeanPercentageError.R  S3_MeanSquaredError.R  S3_NegativePredictiveValue.R  S3_PinballLoss.R  S3_PoissonDeviance.R  S3_PreOrder.R  S3_PreSort.R  S3_Precision.R  S3_PrecisionRecallCurve.R  S3_Recall.R  S3_ReceiverOperatorCharacteristics.R  S3_RelativeAbsoluteError.R  S3_RelativeRootMeanSquaredError.R  (+14 more)
SLmetrics/data/: banknote.rda  obesity.rda  wine.quality.rda
SLmetrics/man/: SLmetrics-package.Rd  classification_accuracy.Rd  classification_accuracy.cmatrix.Rd  classification_accuracy.factor.Rd  classification_auc.pr.curve.Rd  classification_auc.pr.curve.factor.Rd  classification_auc.roc.curve.Rd  classification_auc.roc.curve.factor.Rd  classification_baccuracy.Rd  classification_baccuracy.cmatrix.Rd  classification_baccuracy.factor.Rd  classification_brier.score.Rd  classification_brier.score.matrix.Rd  classification_ckappa.Rd  classification_ckappa.cmatrix.Rd  classification_ckappa.factor.Rd  classification_cmatrix.Rd  classification_cmatrix.factor.Rd  classification_cross.entropy.Rd  classification_cross.entropy.matrix.Rd  classification_dor.Rd  classification_dor.cmatrix.Rd  classification_dor.factor.Rd  classification_fbeta.Rd  classification_fbeta.cmatrix.Rd  classification_fbeta.factor.Rd  classification_fdr.Rd  classification_fdr.cmatrix.Rd  classification_fdr.factor.Rd  classification_fer.Rd  classification_fer.cmatrix.Rd  classification_fer.factor.Rd  classification_fmi.Rd  classification_fmi.cmatrix.Rd  classification_fmi.factor.Rd  classification_fpr.Rd  classification_fpr.cmatrix.Rd  classification_fpr.factor.Rd  classification_hammingloss.Rd  classification_hammingloss.cmatrix.Rd  (+133 more)
SLmetrics/src/: Makevars.in  Makevars.win.in  RcppExports.cpp  classification_Accuracy.cpp  classification_Accuracy.h  classification_BalancedAccuracy.cpp  classification_BalancedAccuracy.h  classification_BrierScore.cpp  classification_BrierScore.h  classification_CohensKappa.cpp  classification_CohensKappa.h  classification_ConfusionMatrix.cpp  classification_ConfusionMatrix.h  classification_CrossEntropy.cpp  classification_CrossEntropy.h  classification_DiagnosticOddsRatio.cpp  classification_DiagnosticOddsRatio.h  classification_FBetaScore.cpp  classification_FBetaScore.h  classification_FalseDiscoveryRate.cpp  classification_FalseDiscoveryRate.h  classification_FalseOmissionRate.cpp  classification_FalseOmissionRate.h  classification_FalsePositiveRate.cpp  classification_FalsePositiveRate.h  classification_FowlkesMallowsIndex.cpp  classification_FowlkesMallowsIndex.h  classification_HammingLoss.cpp  classification_HammingLoss.h  classification_JaccardIndex.cpp  classification_JaccardIndex.h  classification_LogLoss.cpp  classification_LogLoss.h  classification_MatthewsCorrelationCoefficient.cpp  classification_MatthewsCorrelationCoefficient.h  classification_NegativeLikelihoodRatio.cpp  classification_NegativeLikelihoodRatio.h  classification_NegativePredictiveValue.cpp  classification_NegativePredictiveValue.h  classification_PositiveLikelihoodRatio.cpp  (+61 more)
SLmetrics/tests/: testthat.R
fCWTr/: DESCRIPTION  LICENSE.note  MD5  NAMESPACE  NEWS.md  README.md  configure  configure.ac
fCWTr/R/: cpp11.R  data.R  fCWTr-package.R  fcwt.R  fcwt_batch.R  fcwtr_scalogram.R  zzz.R
fCWTr/data/: ts_sin_440.rda  ts_sin_sin.rda  ts_sin_superpos.rda
fCWTr/man/: as.data.frame.fcwtr_scalogram.Rd  autoplot.fcwtr_scalogram.Rd  fcwt.Rd  fcwt_batch.Rd  plot.fcwtr_scalogram.Rd  ts_sin_440.Rd  ts_sin_sin.Rd  ts_sin_superpos.Rd
fCWTr/src/: Makevars.in  Makevars.win  cpp11.cpp  fcwt.cpp  fcwt.h  interface_fcwt.cpp
fCWTr/tests/: testthat.R
glpkAPI/: DESCRIPTION  MD5  NAMESPACE  README.md  configure  configure.ac
glpkAPI/inst/: INSTALL  NEWS.Rd  README  c2r.map
glpkAPI/man/: addColsGLPK.Rd  addRowsGLPK.Rd  advBasisGLPK.Rd  bfExistsGLPK.Rd  bfUpdatedGLPK.Rd  checkDupGLPK.Rd  copyProbGLPK.Rd  cpxBasisGLPK.Rd  createIndexGLPK.Rd  delColsGLPK.Rd  delProbGLPK.Rd  delRowsGLPK.Rd  deleteIndexGLPK.Rd  eraseProbGLPK.Rd  factorizeGLPK.Rd  findColGLPK.Rd  findRowGLPK.Rd  getBfcpGLPK.Rd  getBheadGLPK.Rd  (+138 more)
rcontroll/: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md  configure  configure.ac
(+96634 files in other folders)
